<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="16dp">

    <TextView android:id="@+id/tVAddProjectTitle" android:layout_width="0dp" android:layout_height="wrap_content"
        android:text="@string/addProjectTitle" android:textAlignment="center" android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/tVCompanyName" android:layout_width="0dp" android:layout_height="wrap_content"
        android:text="@string/companyNameTitle" android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tVAddProjectTitle" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/tVUserEmail" android:layout_width="0dp" android:layout_height="wrap_content"
        android:text="@string/userEmailTitle" android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tVCompanyName" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <EditText android:id="@+id/eTProjectName" android:layout_width="0dp" android:layout_height="wrap_content"
        android:hint="@string/projectNameHint" android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tVUserEmail" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <Button android:id="@+id/btnConfirmAddProject" android:layout_width="0dp" android:layout_height="wrap_content"
        android:text="@string/confirmAddProject"
        app:layout_constraintBottom_toTopOf="@id/lVProjects" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Live projects list so newly created projects show immediately and are selectable -->
    <ListView
        android:id="@+id/lVProjects"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnConfirmAddProject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
